Trying to fix overlapping description text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -288,8 +288,7 @@ body {
   grid-template-rows: var(--title-h) var(--desc-h) var(--tech-h) auto;
 }
 
-.card-title,
-.card-desc {
+.card-title {
   margin: 0;
   padding-block: 0.25rem;
   padding-inline: 1rem;
@@ -315,6 +314,7 @@ body {
   font-size: 16px;
   max-height: calc(1.28em * 2);
   padding-block: 1rem;
+  background-color: orange;
 }
 
 .t-icons {
